# image-processing-server

./: .dockerignore  .gitignore  LICENCE  README.md  postman.json  pyproject.toml
api/: config.py  main.py
api/routes/: images.py
api/schemas/: schemas.py
api/utils/: convert.py  executor.py  image.py
docker/: Dockerfile  entrypoint.sh  server_start.sh
examples/: client_example.py
tests/: test_api.py  utils.py
